add beta test 2

--- a/src/main/resources/telegrambot.properties
+++ b/src/main/resources/telegrambot.properties
@@ -1,2 +1,3 @@
 bot.name=@getKeyTest_bot
-bot.token=5332227509:AAHznZRX_QbWbsZzDBsJ37_t_LFWmhVHz8E
+bot.token=5801549641:AAG5-U3V1hybXVD7t8Tvu4DGonZAny23Row
+bot.admin.password=12345
